Deployment-stargeie/blue-green/green-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green-nginx
    version: green
  ports:
    - port: 80
      targetPort: 80
#  kubectl run test-nginx --image=curlimages/curl --rm -it --restart=Never -- curl http://nginx-svc.default.svc.cluster.local:80
