Deployment-stargeie/blue-green/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: nginx-gateway
  rules:
    - backendRefs:
        - name: blue-svc
          port: 80
